--- a/tutorial/.env
+++ b/tutorial/.env
@@ -1,1 +1,1 @@
-destinations = [{ "name":"<Your-Destination-Name>","proxyHost":"localhost","proxyPort":8887,"url":"http://<Your-Destination-Name>.dest"}]cd
+destinations = [{ "name":"<Your-Destination-Name>","proxyHost":"localhost","proxyPort":8887,"url":"http://<Your-Destination-Name>.dest"}]
